created copyright text

--- a/index.html
+++ b/index.html
@@ -211,9 +211,7 @@
         </div>
       </div>
 
-      <small class="footer__copy"
-        >Copyright Velocity Inc. Made in Webflow.
-      </small>
+      <small class="footer__copy">Copyright Velocity Inc. 2024 </small>
     </footer>
     <script src="script.js"></script>
   </body>
