--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <button type="button">Tab Button 3</button>
             </div>
             <div class="tabs__item">
-              <img src="/img/tab1.jpg" alt="img" />
+              <img src="./img/tab1.jpg" alt="img" />
               <h4>Some Title Here</h4>
               <div class="tabs__desc">
                 <p>
@@ -130,7 +130,7 @@
               </div>
             </div>
             <div class="tabs__item">
-              <img src="/img/tab2.jpg" alt="img" />
+              <img src="./img/tab2.jpg" alt="img" />
               <h4>Some Title Here</h4>
               <div class="tabs__desc">
                 <p>
@@ -144,7 +144,7 @@
               </div>
             </div>
             <div class="tabs__item">
-              <img src="/img/tab3.jpg" alt="img" />
+              <img src="./img/tab3.jpg" alt="img" />
               <h4>Some Title Here</h4>
               <div class="tabs__desc">
                 <p>
